# Podwise

./: .dockerignore  .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py  models.py  utils.py
deployment/: docker-compose.yml
deployment/nginx/: app.conf
example/: history of AI.txt
tools/: __init__.py  audio_editors.py  higgs_tts.py
